added fallback for gig end time display

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -27,7 +27,7 @@
                   <p class="dashboard-gig-date-time" style="margin: 0;">
                     <%= registration.gig.date.strftime("%a, %b %e %Y") %><br>
                     <%= registration.gig.time_from.strftime("%I:%M %P") %> - 
-                    <%= registration.gig.time_to.strftime("%I:%M %P") %>
+                    <%= registration.gig.time_to ? registration.gig.time_to.strftime("%I:%M %P") : "TBA" %>
                   </p>
                   <h1 class="dashboard-gig-title" style="font-size: 16px; margin: 5px 0; text-wrap: wrap"><%= registration.gig.event_name %>: <%= registration.gig.band %></h1>
                   <p class="dashboard-gig-location" style="font-size: 14px; color: #555; margin: 5px 0;"><i class="fa-solid fa-location-dot"></i>&nbsp;<%= registration.gig.location_name%></p>
