fix: added conditional for already-registered div to appear only when user is logged in

--- a/app/views/gigs/_gigs.html.erb
+++ b/app/views/gigs/_gigs.html.erb
@@ -43,7 +43,7 @@
             <!-- Modal content goes here -->
           </div>
           <div class="already-registered text-center">
-            <% if gig.registrations.find_by(user_id: current_user.id) %>
+            <% if current_user && gig.registrations.find_by(user_id: current_user.id) %>
               <h2>You are already registered for this gig!</h2>
             <% end %>
           </div>
