--- a/app/views/gigs/_gigs.html.erb
+++ b/app/views/gigs/_gigs.html.erb
@@ -23,13 +23,15 @@
   </div>
   <div class="col-2">
     <%#  %>
-    <div class="register-button" data-controller="sweetalert">
-      <%= simple_form_for [gig, @registration], html: { data: { action: "submit->sweetalert#confirm" }, turbo: false } do |f| %>
-        <%= f.button :button, class: 'btn btn-flat' do %>
-          <i class="fa-solid fa-ticket"></i>
+    <% if current_user %>
+      <div class="register-button" data-controller="sweetalert">
+        <%= simple_form_for [gig, @registration], html: { data: { action: "submit->sweetalert#confirm" }, turbo: false } do |f| %>
+          <%= f.button :button, class: 'btn btn-flat' do %>
+            <i class="fa-solid fa-ticket"></i>
+          <% end %>
         <% end %>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
     <%# TODO: Get the gigs/show page %>
     <%= link_to "<i class='fa-solid fa-circle-info'></i>".html_safe, gig_path(gig), class: 'btn btn-flat register-button' , data: { bs_toggle: "modal", bs_target: "#myModal", action: "click->modal#get_modal" } %>
     <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
