--- a/app/views/gigs/show.html.erb
+++ b/app/views/gigs/show.html.erb
@@ -49,7 +49,7 @@
           </div>
         <% else %>
           <div class="register-button text-center">
-            <%= link_to "Save this? Log in", new_user_session_path, class: "btn btn-primary", style: "background-color:#8A68CE; color: white; padding: 10px 10px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border: none; border-radius: 21px; width: 300px;" %>
+            <%= link_to "Save this gig? Log in.", new_user_session_path, class: "btn btn-primary", style: "background-color:#8A68CE; color: white; padding: 10px 10px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border: none; border-radius: 21px; width: 300px;" %>
           </div>
         <% end %>
       </div>
