--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -2,9 +2,8 @@
   <h1><i class="fa-solid fa-comment"></i> Gig Chats</h1>
   <hr>
   <p class="lead">
-    <h3>Connect with fellow concert-goers!</h3>
-    Meet people who are attending your event!<br>
-    Start chatting now! <br>
+    Meet people heading to the same show.<br>
+    Talk plans, share hype, or just say hey.<br>
   </p>
   <div class="chat-event-card-container scrollable-container">
     <%= render partial: 'chats', collection: @chatrooms, as: :chat %>
