fix: update navbar link color and remove dropdown menu styles

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar li a {
-  color: #fff;
+  color:  #100303;
 }
 
 .nav-item:hover {
@@ -37,6 +37,3 @@
   }
 }
 
-.dropdown-menu {
-  background-color: #100303;
-}
