--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -1,6 +1,6 @@
 .custom-dropdown {
     // Custom styles for the dropdown container
-    background-color: #f5f5f5;
+    background-color: #fff !important;
     color: #757575;
   }
   
@@ -18,6 +18,8 @@
   }
   
   .custom-dropdown-item {
+    color: #000000;
+
   }
   
   .custom-dropdown-button:hover {
